--- a/styles/style.css
+++ b/styles/style.css
@@ -1,40 +1,365 @@
-body{
-    margin: 0px;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
+
+*{
+    margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+
+body{
+    font-family: "Roboto", sans-serif;
+}
+
+p{
+    font-size: 1rem;
+    line-height: 1.9rem;
+}
+
+h1, h2, h3, h4, h5, h6, strong{
+    color: #000000;
+}
+
+p, span, label, input, textarea, li, a{
+    color: #222222;
+}
+
+a{
+    text-decoration: none;
+}
+
+.main-container, .home-container, .myskill-container, .messageus-container, .footer-container{
+    width: 1200px;
+    margin: 0 auto;
+}
+
+.section-title {
+    margin: 1rem 0 4rem;
+    font-size: 2rem;
+}
+  
+.pre-title {
+    text-transform: uppercase;
+    letter-spacing: 0.5rem;
+    color: #7d7d7d;
+    width: fit-content;
+    font-weight: 400;
+    font-size: 0.9rem;
 }
 
 header{
-    margin: 10px 20px;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    background-color: #fbfbfb;
+}
+
+.main-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo{
+    display: flex;
     align-items: center;
 }
 
-.logo-icon{
-    width: 50px;
-    height: 50px;
-    border: 1px solid black;
+.logo img{
+    width: 70px;
+    height: 70px;
 }
 
-.menu ul{
+nav ul{
     list-style: none;
+    display: flex;
+    padding: 2rem 0;
+    gap: 3rem 0;
+}
+
+li a{
+    margin: 5px;
+    padding: 20px;
+}
+
+li a:hover{
+    background-color: #fbfbfb;
+}
+
+.burger div{
+    width: 25px;
+    height: 2px;
+    background-color: #000;
+    margin: 7px;
+    transition: all 0.3s;
+    z-index: 99;
+}
+
+.burger {
+    display: none;
+    z-index: 99;
+    position: fixed;
+    top: 17.5px;
+    right: 35px;
+}
+
+#home{
+    padding: 120px;
+    background-color: #fbfbfb;
+}
+
+.home-container{
+    height: 720px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-}
-
-hr{
-    margin: 0;
-    padding: 0;
-    display: block;
-}
-
-#home, #myskill, #message{
-    margin: 10px 20px;
-}
-
-.banner{
-    width: 1366px;
-    height: 578px;
-    border: 1px solid black;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
+}
+
+.hero-name{
+    font-size: 3rem;
+    font-weight: 700;
+    margin: 0.5rem 0 1rem;
+}
+
+.hero-name #client-name{
+    text-transform: capitalize;
+}
+
+.hero-name #owner-name{
+    color: #ffad05;
+}
+
+.hero-right{
+    display: flex;
+    justify-content: center;
+}
+
+.hero-right img{
+    width: 90%;
+}
+
+#myskill{
+    padding: 6rem 0;
+    background-color: #ffad05;
+}
+
+.myskill-title{
+    text-align: center;
+}
+
+.grid-3{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 3rem;
+}
+
+.skill{
+    padding: 3rem 2rem;
+    text-align: center;
+    background-color: #fbfbfb;
+    border-radius: 0.7rem;
+}
+
+.skill h4{
+    margin: 1.5rem 0;
+    font-weight: 500;
+    font-size: 1.05rem;
+}
+
+.skill-icon img{
+    width: 50%;
+    margin: 0 auto;
+    padding: 1rem 1.3rem;
+    border-radius: 0.5rem;
+}
+
+#messageus{
+    padding: 6rem 0;
+}
+
+.messageus-title{
+    text-align: center;
+}
+
+.messageus-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    gap: 3rem;
+}
+
+.messageus-form div{
+    margin-bottom: 1.4rem;
+}
+
+.messageus-form div input, .messageus-form div textarea{
+    width: 100%;
+    padding: 0.75rem 1.3rem;
+    font-family: "Roboto", sans-serif;
+    background: #fbfbfb;
+    border: 1px solid #222222;
+    border-radius: 3px;
+    resize: none;
+}
+
+.messageus-form input::placeholder, .messageus-form textarea::placeholder{
+    color: #7d7d7d;
+}
+
+.btn-submit{
+    width: 100%;
+    padding: 0.75rem 1.3rem;
+    background-color: #ffad05;
+    color: #000;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+
+.btn-submit:hover{
+    background-color: #e29700;
+}
+
+.messageus-right {
+    max-height: 386px   ;
+    overflow-y: scroll;
+    padding: 1rem;
+    border-radius: 3px;
+}
+
+.message-item {
+    padding: 1rem;
+    margin-bottom: 1.4rem;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    background-color: #ffffff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.message-item p {
+    margin: 0;
+    margin-bottom: 0.5rem;
+}
+
+.messageus-right::-webkit-scrollbar {
+    display: none;
+}
+
+footer{
+    padding: 2rem 0;
+    background-color: #ffad05;
+    text-align: center;
+}
+
+@media screen and (max-width: 1200px) {
+    .main-container, .home-container, .myskill-container, .messageus-container, .footer-container{
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    p{
+        font-size: 0.9rem;
+        line-height: 1.8;
+    }
+    .grid-3{
+        gap: 1rem;
+    }
+}
+
+@media screen and (max-width: 825px) {
+    .burger{
+        display: block;
+        cursor: pointer;
+    }
+
+    .toggle-burger .line-1{
+        transform: rotate(-45deg) translate(-5px, 7px);
+    }
+
+    .toggle-burger .line-2 {
+        opacity: 0;
+    }
+    
+    .toggle-burger .line-3 {
+        transform: rotate(45deg) translate(-5px, -7px);
+    }
+
+    nav{
+        position: fixed;
+        width: 50%;
+        right: 0;
+        top: 0;
+        height: 100vh;
+        flex-direction: column;
+        background: #fbfbfb;
+        border-left: #7d7d7d;
+        z-index: 99;
+        transform: translateX(100%);
+        transition: 0.2s ease-in-out;
+    }
+
+    nav ul{
+        height: 100vh;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .nav-active{
+        transform: translateX(0);
+    }
+
+    .section-title {
+        font-size: 1.6rem;
+        margin: 0.6rem 0 2.5rem;
+    }
+    
+    .pre-title {
+        font-size: 0.8rem;
+    }
+    
+    .home-container {
+        grid-template-columns: 1fr;
+        height: fit-content;
+    }
+    
+    .hero-right {
+        order: -1;
+    }
+    
+    .hero-right img {
+        width: 70%;
+    }
+    
+    .hero-left {
+        text-align: center;
+        padding-bottom: 5rem;
+    }
+    
+    .hero-left .pre-title {
+        margin: 0 auto;
+    }
+    
+    .hero-name {
+        font-size: 2.3rem;
+        margin-bottom: 0.5rem;
+    }
+    
+    .skill-icon img{
+        width: 45%;
+    }
+
+    footer {
+        padding: 2rem 0;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .section-title{
+        font-size: 1.3rem;
+    }
+
+    .pre-title{
+        font-size: 0.7rem;
+    }
 }
